2006-10-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclVar.c: minimal change, provides behaviour of TIP 278
	but without any optimisation yet. Failures in namespace-old.test,
	namespace.test, parse.test and var.test: testfiles not yet updated.    
	
==
== updated to tag tip-278-20061009
==
	
2006-10-09  Miguel Sofer  <msofer@users.sf.net>

	* tests/*.test: updated all tests to refer explicitly to the
	global variables ::errorInfo, ::errorCode, ::env and
	::tcl_platform: many were relying on the alternative lookup in the
	global namespace, that feature is tested specifically in namespace
	and variable tests.
	The modified testfiles are: apply.test, basic.test, case.test,
	cmdIL.test, cmdMZ.test, compExpr-old.test, error.test, eval.test,
	event.test, expr.test, fileSystem.test, for.test, http.test,
	if.test, incr-old.test, incr.test, interp.test, io.test,
	ioCmd.test, load.test, misc.test, namespace.test, parse.test,
	parseOld.test, pkg.test, proc-old.test, set.test, switch.test,
	tcltest.test, thread.test, var.test, while-old.test, while.test.

==	
== BRANCH from tag tip-278-branch-root	
=====================================================================
	
2006-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc: bug #1571954: avoid /RTCc flag with MSVC8

2006-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/binary.n:        TIP #275: Support unsigned values in
	* generic/tclBinary.c: binary command. Tests and documentation
	* tests/binary.test:   updated.

2006-10-05  Andreas Kupries  <andreask@activestate.com>

	* library/tm.tcl: Fixed bug in TIP #189 implementation, now
	  allowing '_' in module names.

2006-10-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/http/http.tcl (http::geturl): only do geturl url rfc
	3986 validity checking if $::http::strict is true (default true
	for 8.5).  [Bug 1560506]

	* generic/tcl.h: note limitation on changing Tcl_UniChar size